[gd_scene load_steps=7 format=3 uid="uid://b6wahcfd3hcf2"]

[ext_resource type="Script" path="res://addons/snippetter/menu/menu.gd" id="1_ii83g"]
[ext_resource type="PackedScene" uid="uid://dl5c8rsrpb8eo" path="res://addons/snippetter/menu/listing/listing.tscn" id="2_vbrrw"]
[ext_resource type="PackedScene" uid="uid://ce4322hiu7l6k" path="res://addons/snippetter/menu/editor/editor.tscn" id="3_ptxoo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jwdbs"]
bg_color = Color(0.188235, 0.215686, 0.262745, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4ci0b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ff6yf"]
bg_color = Color(0.129412, 0.14902, 0.180392, 1)

[node name="Menu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jwdbs")
script = ExtResource("1_ii83g")
listing_scene = ExtResource("2_vbrrw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Snippetter"
label_settings = SubResource("LabelSettings_4ci0b")
vertical_alignment = 1

[node name="AddButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(125, 25)
layout_mode = 2
size_flags_horizontal = 0
text = "Create New Snippet"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ff6yf")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="ListingContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="DeleteConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "Confirm deletion"
initial_position = 1
ok_button_text = "Delete"

[node name="Editor" parent="." instance=ExtResource("3_ptxoo")]

[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="canceled" from="DeleteConfirmationDialog" to="." method="_on_delete_confirmation_dialog_canceled"]
[connection signal="confirmed" from="DeleteConfirmationDialog" to="." method="_on_delete_confirmation_dialog_confirmed"]
[connection signal="close_button_presssed" from="Editor" to="." method="_on_editor_close_button_presssed"]
[connection signal="save_button_pressed" from="Editor" to="." method="_on_editor_save_button_pressed"]
